# vc-issuer-mock

./: .dockerignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: lint-rust.yaml  test-cargo-workspace.yaml  test-docker-test-suites.yaml  test-docker-vc-issuer-mock-core.yaml
.github/workflows/test-docker-vc-issuer-mock-core/: healthcheck.sh
crates/vc-issuer-mock-core/: Cargo.toml  README.md
crates/vc-issuer-mock-core/src/: lib.rs  main.rs
crates/vc-issuer-mock-core/src/axum_middlewares/: mod.rs
crates/vc-issuer-mock-core/src/axum_middlewares/log_req_res_body/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/: credentials.rs  mod.rs  oid4vci.rs
crates/vc-issuer-mock-core/src/endpoints/oid4vci/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/oid4vci/credential_offer/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/req/json_req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/res/error_res/: custom_problem_types.rs  mod.rs
crates/vc-issuer-mock-core/src/endpoints/res/success_res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/success_res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/: credentials.rs  mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/credentials/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/credentials/req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/credentials/res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/json_req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/req/json_req/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/res/error_res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/res/success_res/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/res/vc_api_error/: mod.rs
crates/vc-issuer-mock-core/src/endpoints/vc_api/vc_api_error/: custom_problem_types.rs  mod.rs
crates/vc-issuer-mock-core/src/gen_keypair/: mod.rs
crates/vc-issuer-mock-core/src/issuer_keys/: mod.rs
crates/vc-issuer-mock-core/src/server/: log_req_body.rs  log_req_res_body.rs  mod.rs
crates/vc-issuer-mock-core/src/test_issuer_keys/: mod.rs
crates/vc-issuer-mock-core/src/test_jwks/: mod.rs
crates/vc-issuer-mock-core/src/test_vc_json/: mod.rs
crates/vc-issuer-mock-core/src/vcdm_v2/: mod.rs  problem_details.rs
crates/vc-issuer-mock-core/src/vcdm_v2/default_vc_properties/: mod.rs
crates/vc-issuer-mock-core/src/verification_method/: mod.rs
crates/vc-issuer-mock-core/tests-vc-api/: .localImplementationsConfig.cjs  README.md  local-setup.sh  local-test.sh  localConfig.cjs
crates/vc-issuer-mock-http/: Cargo.toml  README.md
crates/vc-issuer-mock-http/src/: lib.rs  main.rs
crates/vc-issuer-mock-http/src/endpoints/custom/: mod.rs
crates/vc-issuer-mock-http/src/endpoints/custom/credential_offer/: mod.rs
crates/vc-issuer-mock-http/src/settings/: mod.rs
crates/vc-issuer-mock-http/src/templates/: mod.rs
crates/vc-issuer-mock-http/src/test_tracing/: mod.rs
crates/vc-issuer-mock-http/templates/: index.html
crates/vc-issuer-mock-rs/: Cargo.toml
crates/vc-issuer-mock-server/: Cargo.toml
docker/vc-issuer-mock-core/: Dockerfile  didkit_http.toml  env  nginx.conf  run_servers.sh
