[workspace]
members = [
    "crates/vc-issuer-mock-core",
    "crates/vc-issuer-mock-http",
    "crates/vc-issuer-mock-rs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sho Nakatani"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/laysakura/vc-issuer-mock"
repository = "https://github.com/laysakura/vc-issuer-mock"
readme = "README.md"
keywords = ["vc-issuer-mock", "mock", "vc", "vc-api", "http"]
rust-version = "1.77"
edition = "2021"

[workspace.dependencies]
vc-issuer-mock-core = { path = "crates/vc-issuer-mock-core", version = "0.1.0" }

anyhow = "1.0.70"
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
const_format = "0.2.32"
derive_more = "0.99.18"
http = "1.1.0"
http-body-util = "0.1.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
josekit = "0.8.7"
json-syntax = "0.12.5"
oid4vci = { git = "https://github.com/impierce/openid4vc.git", rev = "dac4102" }
qrcode = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9.0", features = ["json"] }
ssi = { git = "https://github.com/spruceid/ssi.git", rev = "04720d4", features = [
    "secp384r1",
    "bbs",
] }
tempfile = "3.10.1"
tera = "1.20.0"
thiserror = "1.0.63"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.5.2"
urlencoding = "2.1.3"

[workspace.metadata.release]
sign-tag = true
tag-prefix = "{{crate_name}}/"
tag-message = "Release {{crate_name}} version {{version}}."
pre-release-commit-message = "Release"
