[package]
name = "vc-issuer-mock-core"
description = "Core implementations for VC Issuer Mock. Meant to be used only as a dependency for vc-issuer-mock- family."
documentation = "https://docs.rs/vc-issuer-mock-core/"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
bin = ["dep:tokio", "dep:tower-http", "dep:tracing-subscriber"]

[[bin]]
name = "vc-issuer-mock-core"
path = "src/server/mod.rs"
required-features = ["bin"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
derive_more.workspace = true
http.workspace = true
http-body-util.workspace = true
josekit.workspace = true
json-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
ssi.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true

tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
