[package]
name = "vc-issuer-mock-http"
description = "VC Issuer Mock (standalone HTTP server)"
documentation = "https://docs.rs/vc-issuer-mock-server/"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
vc-issuer-mock-core.workspace = true

axum.workspace = true
base64.workspace = true
image.workspace = true
oid4vci.workspace = true
qrcode.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tera.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
